--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -65,6 +65,9 @@ section{
     text-align: center; /* Centers text content */
     background-attachment: fixed;
 }
+    .main-container{
+        margin-top: 50px;
+    }
 
 .main-content{
     color: #fff;
@@ -208,6 +211,8 @@ section{
     box-shadow: 0px 5px 25px rgba(113, 29, 176, 0.25);
     transition: 0.7s ease;
     border-radius: 15px;
+    text-decoration: none;
+    color: #000000;
    
 }
 
